<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp"
    android:layout_marginRight="10dp"
    android:layout_marginLeft="10dp"
    android:background="@android:color/white">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent">

        <ImageView
            android:background="@android:color/white"
            android:layout_marginTop="50dp"
            android:layout_width="200dp"
            android:layout_height="200dp"/>

        <de.hdodenhof.circleimageview.CircleImageView
            android:layout_gravity="center_horizontal"
            android:id="@+id/profile_image"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:src="@android:color/black"
            app:civ_border_width="2dp"
            app:civ_border_color="#FF000000"/>

        <TextView
            android:id="@+id/drname"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="120dp"
            android:textColor="@android:color/black"
            android:text="@string/dr_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/drqualification"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="160dp"
            android:textColor="@android:color/black"
            android:text="@string/qual"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:layout_marginTop="200dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_marginLeft="10dp"
                android:id="@+id/star"
                android:background="@drawable/star"
                android:layout_width="30dp"
                android:layout_height="30dp"/>

            <TextView
                android:layout_marginTop="5dp"
                android:layout_marginLeft="20dp"
                android:textSize="15sp"
                android:text="@string/rating"
                android:id="@+id/rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </LinearLayout>




    </FrameLayout>

</androidx.cardview.widget.CardView>