<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DoctorList">

    <androidx.appcompat.widget.Toolbar
        android:background="#6E78F7"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <ImageView
                android:background="@drawable/cross"
                android:layout_width="20dp"
                android:layout_height="20dp"/>
            <TextView
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:layout_marginLeft="50dp"
                android:fontFamily="@font/poppins_bold"
                android:textColor="@android:color/white"
                android:textSize="17sp"
                android:text="Chat with a doctor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/search_tv"
        android:layout_marginTop="30dp"
        android:textSize="20sp"
        android:layout_marginLeft="20dp"
        android:text="@string/search_health_problem_symptoms"
        android:layout_below="@+id/toolbar"
        android:textColor="@android:color/black"
        android:fontFamily="@font/gilroy_bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:id="@+id/search"
        android:layout_below="@+id/search_tv"
        android:layout_centerInParent="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/white_circle">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="50dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/zoom_in" />

        <EditText
            android:background="@android:color/transparent"
            android:layout_marginLeft="20dp"
            android:layout_width="251dp"
            android:layout_height="match_parent"
            android:hint="@string/cold_cough" />
    </LinearLayout>

    <LinearLayout
        android:layout_marginLeft="20dp"
        android:id="@+id/specialities"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/search"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/know_speciality"
            android:textSize="20sp"
            android:textColor="@android:color/black"
            android:fontFamily="@font/poppins_bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:text="@string/top_specialities"
            android:textSize="17sp"
            android:textColor="@android:color/black"
            android:fontFamily="@font/poppins_regular"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_below="@+id/specialities"
        android:layout_marginTop="10dp"
        android:id="@+id/doctor_category_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</RelativeLayout>