<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MedicinesActivity">

    <androidx.appcompat.widget.Toolbar
        android:background="#6E78F7"
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_marginTop="0dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:layout_marginTop="5dp"
                    android:background="@drawable/cross"
                    android:layout_width="20dp"
                    android:layout_height="20dp"/>
                <TextView
                    android:layout_gravity="center_horizontal"
                    android:gravity="center"
                    android:layout_marginLeft="50dp"
                    android:fontFamily="@font/poppins_bold"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:text="@string/medicines"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>


            <ImageView
                android:layout_marginRight="10dp"
                android:layout_toLeftOf="@+id/cart"
                android:background="@drawable/ic_search"
                android:layout_width="30dp"
                android:layout_height="30dp"/>

            <ImageView
                android:layout_marginRight="10dp"
                android:id="@+id/cart"
                android:layout_alignParentEnd="true"
                android:background="@drawable/ic_shopping_cart"
                android:layout_width="30dp"
                android:layout_height="30dp"/>
        </RelativeLayout>

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/medi"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/medicines"
        android:textSize="30sp"
        android:fontFamily="@font/poppins_bold"
        android:textColor="@android:color/black"
        android:layout_below="@+id/toolbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.cardview.widget.CardView
        android:layout_centerHorizontal="true"
        android:background="@android:color/white"
        android:layout_below="@+id/medi"
        android:layout_margin = "10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:layout_margin="20dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/owp"
                android:textColor="@android:color/black"
                android:textStyle="bold"
                android:text="@string/order_with_prescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:textSize="10sp"
                android:layout_below="@id/owp"
                android:layout_marginTop="5dp"
                android:layout_toLeftOf="@+id/upload"
                android:textColor="@android:color/black"
                android:fontFamily="@font/poppins_regular"
                android:text="@string/order_with_prescription_details"
                android:layout_width="200dp"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/upload"
                android:layout_marginLeft="20dp"
                android:textColor="@android:color/white"
                android:layout_toRightOf="@+id/owp"
                android:text="@string/upload"
                android:background="@drawable/rounded2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>