<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.ProfileFragment"
    android:background="#EFE8E8">

    <ImageView
        android:id="@+id/square"
        android:background="@drawable/square"
        android:layout_width="match_parent"
        android:layout_height="300dp"/>

    <Button
        android:layout_width="248dp"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="200dp"
        android:background="@drawable/button"
        android:fontFamily="@font/poppins_bold" />

    <ImageView
        android:layout_width="25dp"
        android:layout_height="29dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/contactus" />

    <ImageView
        android:id="@+id/settings"
        android:layout_width="25dp"
        android:layout_height="29dp"
        android:layout_alignParentRight="true"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/settings" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:layout_marginTop="20dp"
        android:id="@+id/profile_image"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/profile"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp" />

    <TextView
        android:id="@+id/person_name"
        android:textColor="@android:color/white"
        android:layout_centerInParent="true"
        android:textSize="17sp"
        android:fontFamily="@font/poppins_bold"
        android:layout_marginTop="10dp"
        android:text="@string/person_name"
        android:layout_below="@+id/profile_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/person_contact"
        android:text="@string/contact"
        android:fontFamily="@font/poppins_regular"
        android:textColor="@android:color/white"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/person_name"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <ImageView
        android:background="@drawable/rectangle2"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_below="@+id/square"
        android:layout_height="wrap_content"/>

    <ScrollView
        android:layout_below="@+id/square"
        android:layout_marginTop="80dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:background="@drawable/mydoctors"
                    android:layout_width="30dp"
                    android:layout_height="40dp"/>

                <TextView
                    android:layout_marginTop="08dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/my_dr"
                    android:fontFamily="@font/poppins_bold"
                    android:textSize="17sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_alignParentEnd="true"
                        android:layout_width="wrap_content"
                        android:layout_height="51dp"
                        android:background="@drawable/arrowright" />
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:background="@drawable/myappointments"
                    android:layout_width="30dp"
                    android:layout_height="40dp"/>

                <TextView
                    android:layout_marginTop="08dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/my_appoint"
                    android:fontFamily="@font/poppins_bold"
                    android:textSize="17sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_alignParentEnd="true"
                        android:layout_width="wrap_content"
                        android:layout_height="51dp"
                        android:background="@drawable/arrowright" />
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:background="@drawable/onlineconsultation"
                    android:layout_width="30dp"
                    android:layout_height="40dp"/>

                <TextView
                    android:layout_marginTop="08dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/my_consult"
                    android:fontFamily="@font/poppins_bold"
                    android:textSize="17sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_alignParentEnd="true"
                        android:layout_width="wrap_content"
                        android:layout_height="51dp"
                        android:background="@drawable/arrowright" />
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:background="@drawable/medicalrecords"
                    android:layout_width="30dp"
                    android:layout_height="40dp"/>

                <TextView
                    android:layout_marginTop="08dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/medical_records"
                    android:fontFamily="@font/poppins_bold"
                    android:textSize="17sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_alignParentEnd="true"
                        android:layout_width="wrap_content"
                        android:layout_height="51dp"
                        android:background="@drawable/arrowright" />
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:background="@drawable/reminders"
                    android:layout_width="30dp"
                    android:layout_height="40dp"/>

                <TextView
                    android:layout_marginTop="08dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/reminders"
                    android:fontFamily="@font/poppins_bold"
                    android:textSize="17sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_alignParentEnd="true"
                        android:layout_width="wrap_content"
                        android:layout_height="51dp"
                        android:background="@drawable/arrowright" />
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:background="@drawable/healthinterest"
                    android:layout_width="30dp"
                    android:layout_height="40dp"/>

                <TextView
                    android:layout_marginTop="08dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/health_interest"
                    android:fontFamily="@font/poppins_bold"
                    android:textSize="17sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_alignParentEnd="true"
                        android:layout_width="wrap_content"
                        android:layout_height="51dp"
                        android:background="@drawable/arrowright" />
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:background="@drawable/payments"
                    android:layout_width="30dp"
                    android:layout_height="40dp"/>

                <TextView
                    android:layout_marginTop="08dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/my_payments"
                    android:fontFamily="@font/poppins_bold"
                    android:textSize="17sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_alignParentEnd="true"
                        android:layout_width="wrap_content"
                        android:layout_height="51dp"
                        android:background="@drawable/arrowright" />
                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <ImageView
                    android:background="@drawable/offers"
                    android:layout_width="30dp"
                    android:layout_height="40dp"/>

                <TextView
                    android:layout_marginTop="08dp"
                    android:layout_marginLeft="20dp"
                    android:text="@string/offers"
                    android:fontFamily="@font/poppins_bold"
                    android:textSize="17sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:layout_alignParentEnd="true"
                        android:layout_width="wrap_content"
                        android:layout_height="51dp"
                        android:background="@drawable/arrowright" />
                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>


</RelativeLayout>